--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -1,1 +1,9 @@
 // Add your custom CSS here.
+#cart .row .col-md-7.col-lg-8 {
+    display: flex;
+    flex-direction: column
+}
+  
+#cart .row .recommended-items {
+    order: 1
+}
