--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -34,3 +34,8 @@
     font-size: 20px !important;
     content: "Que tal aproveitar o frete?"
   }
+
+
+  #account-form-type-j, #account-form-type-j + label {
+    display: none !important;
+  } 
